--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable( PGMBuilder
   ProgramOptions.hpp
   bulkConvert.cpp
   convert.cpp
+  MameDB.cpp
 )
 
 target_include_directories( PGMBuilder PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libextern/zip/src )
@@ -21,6 +22,7 @@ target_link_libraries( PGMBuilder PRIVATE zip )
 if (WIN32)
 
   target_compile_definitions( PGMBuilder PRIVATE -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE )
+  #set_source_files_properties(MameDB.cpp PROPERTIES COMPILE_FLAGS "/P")
 
 endif()
 
