--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable( PGMBuilder
   Log.cpp
   Image.cpp
   MameImage.cpp
+  RomAssembly.cpp
 )
 
 target_include_directories( PGMBuilder PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libextern/zip/src )
@@ -27,27 +28,19 @@ target_link_libraries( PGMBuilder PRIVATE zip )
 if (WIN32)
 
   target_compile_definitions( PGMBuilder PRIVATE -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE )
-  #set_source_files_properties(MameDBImport.cpp PROPERTIES COMPILE_FLAGS "/P")
 
 endif()
 
-
 target_precompile_headers( PGMBuilder PRIVATE
-  <array>
-  <algorithm>
-  <string>
+  <algorithm> <array>
   <bit>
-  <charconv>
-  <cassert>
-  <cstdint>
-  <vector>
-  <format>
-  <span>
+  <cassert> <charconv> <cstdint>
+  <filesystem> <format> <fstream> <functional>
   <iostream>
-  <filesystem>
-  <fstream>
   <optional>
+  <span> <string>
   <unordered_map>
+  <vector>
 )
 
 
