--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable( PGMBuilder
   MameImage.cpp
   RomAssembly.cpp
   crypt.cpp
+  crypt/kov/kov_deprotect.cpp
 )
 
 target_include_directories( PGMBuilder PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libextern/zip/src )
